CustomObjects/objects/invoiceit_s__Revenue_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>invoiceit_s__Account__c</fullName>
        <description>The account record against which the transaction is recorded</description>
        <inlineHelpText>The account record against which the transaction is recorded</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Revenue Transactions</relationshipLabel>
        <relationshipName>Revenue_Transaction_Account</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>invoiceit_s__Accounting_Code1__c</fullName>
        <description>The GL account against which the revenue amount will be mapped. This field is used to link the records between Invoice IT and your GL system</description>
        <inlineHelpText>The GL account against which the revenue amount will be mapped. This field is used to link the records between Invoice IT and your GL system</inlineHelpText>
        <label>Accounting Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Accounting_Code__c</fullName>
        <formula>invoiceit_s__Order_Rate_Plan_Charge__r.invoiceit_s__Accounting_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Obsolete_Accounting Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Applied_Recognition_Date_Name__c</fullName>
        <description>Holds a copy of the date name that was used to match the recognition rule</description>
        <inlineHelpText>Holds a copy of the date name that was used to match the recognition rule</inlineHelpText>
        <label>Applied Recognition Date (Name)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Applied_Recognition_Date_Value__c</fullName>
        <description>Holds a copy of the date value that was used to match the recognition rule</description>
        <inlineHelpText>Holds a copy of the date value that was used to match the recognition rule</inlineHelpText>
        <label>Applied Recognition Date (Value)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Applied_Recognition_Type__c</fullName>
        <description>This holds the Recognition Type value of the Revenue Recognition Rule applied. This field is created for audit purposes</description>
        <inlineHelpText>This holds the Recognition Type value of the Revenue Recognition Rule applied. This field is created for audit purposes</inlineHelpText>
        <label>Applied Recognition Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Applied_Revenue_Recognition_Rule__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The revenue recognition rule record applied</description>
        <inlineHelpText>The revenue recognition rule record applied</inlineHelpText>
        <label>Applied Revenue Recognition Rule</label>
        <referenceTo>invoiceit_s__Revenue_Recognition_Rule__c</referenceTo>
        <relationshipLabel>Revenue Transactions</relationshipLabel>
        <relationshipName>Revenue_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Credit_Line__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Credit line corresponding to this transaction</description>
        <inlineHelpText>Credit line corresponding to this transaction</inlineHelpText>
        <label>Credit Line</label>
        <referenceTo>invoiceit_s__Credit_Line__c</referenceTo>
        <relationshipLabel>Revenue Transactions</relationshipLabel>
        <relationshipName>Revenue_Transaction_CreditLine</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Credit_Note__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Credit note corresponding to this transaction</description>
        <inlineHelpText>Credit note corresponding to this transaction</inlineHelpText>
        <label>Credit Note</label>
        <referenceTo>invoiceit_s__Credit_Note__c</referenceTo>
        <relationshipLabel>Revenue Transactions</relationshipLabel>
        <relationshipName>Revenue_Transaction_CreditNote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__CurrencyL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>invoiceit_s__Currency__c</referenceTo>
        <relationshipLabel>Revenue Transactions</relationshipLabel>
        <relationshipName>Revenue_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Deferred_Balance__c</fullName>
        <description>The deferred balance as of this accounting period</description>
        <inlineHelpText>The deferred balance as of this accounting period</inlineHelpText>
        <label>Deferred Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Deferred_Revenue_Accounting_Code__c</fullName>
        <description>The GL account against which the deferred revenue amount will be mapped. This field is used to link the records between Invoice IT and your GL system</description>
        <inlineHelpText>The GL account against which the deferred revenue amount will be mapped. This field is used to link the records between Invoice IT and your GL system</inlineHelpText>
        <label>Deferred Revenue Accounting Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Invoice_Line__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The invoice line against which this transaction is created</description>
        <inlineHelpText>The invoice line against which this transaction is created</inlineHelpText>
        <label>Invoice Line</label>
        <referenceTo>invoiceit_s__Invoice_Lines__c</referenceTo>
        <relationshipLabel>Revenue Transactions</relationshipLabel>
        <relationshipName>Revenue_Transaction_InvoiceLine</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Invoice__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The invoice against which this transaction is recorded</description>
        <inlineHelpText>The invoice against which this transaction is recorded</inlineHelpText>
        <label>Invoice</label>
        <referenceTo>invoiceit_s__Invoice__c</referenceTo>
        <relationshipLabel>Revenue Transactions</relationshipLabel>
        <relationshipName>Revenue_Transaction_Invoice</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Order_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The order charge data against which this transaction is created</description>
        <inlineHelpText>The order charge data against which this transaction is created</inlineHelpText>
        <label>Order Rate Plan Charge</label>
        <referenceTo>invoiceit_s__Job_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Revenue Transactions</relationshipLabel>
        <relationshipName>Revenue_Transaction_OrderCharge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The order data against which this transaction is created</description>
        <inlineHelpText>The order data against which this transaction is created</inlineHelpText>
        <label>Order</label>
        <referenceTo>invoiceit_s__Job__c</referenceTo>
        <relationshipLabel>Revenue Transactions</relationshipLabel>
        <relationshipName>Revenue_Transaction_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Original_Closed_Revenue_Period__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>When the original revenue period is closed, that values is stored in this for audit purposes</description>
        <inlineHelpText>When the original revenue period is closed, that values is stored in this for audit purposes</inlineHelpText>
        <label>Original Closed Revenue Period</label>
        <referenceTo>invoiceit_s__Revenue_Period__c</referenceTo>
        <relationshipLabel>Revenue Transactions (Original Closed Revenue Period)</relationshipLabel>
        <relationshipName>Revenue_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Recognised_Revenue__c</fullName>
        <description>Total revenue recognized so far for this service</description>
        <inlineHelpText>Total revenue recognized so far for this service</inlineHelpText>
        <label>Recognised Revenue (Cumulative)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Revenue_Amount__c</fullName>
        <description>The revenue amount that recognized this accounting period.</description>
        <inlineHelpText>The revenue amount that recognized this accounting period.</inlineHelpText>
        <label>Revenue Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Revenue_Period_End_Date__c</fullName>
        <formula>invoiceit_s__Revenue_Period__r.invoiceit_s__Revenue_Period_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Revenue_Period_Start_Date__c</fullName>
        <formula>invoiceit_s__Revenue_Period__r.invoiceit_s__Revenue_Period_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Revenue_Period__c</fullName>
        <description>The revenue period against which the revenue is recognized</description>
        <inlineHelpText>The revenue period against which the revenue is recognized</inlineHelpText>
        <label>Revenue Period</label>
        <referenceTo>invoiceit_s__Revenue_Period__c</referenceTo>
        <relationshipLabel>Revenue Transactions</relationshipLabel>
        <relationshipName>Revenue_Transaction_RevenuePeriod</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Revenue Transaction</label>
    <nameField>
        <displayFormat>RT-{0000}</displayFormat>
        <label>Revenue Transaction #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>